objects/Visitation_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Value_Boolean__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Value Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_DateTime__c</fullName>
        <label>Value DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visitation Setting</label>
</CustomObject>